--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "Global Mentoring Program - Module 6 - homework",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "stop": "pkill -f 'node ./src/index.ts'"
   },
   "keywords": [],
   "author": "Zhibek Andykalykova",
